--- a/Banco-de-Dados-e-Persistencia/votalucas-api/src/main/resources/application.properties
+++ b/Banco-de-Dados-e-Persistencia/votalucas-api/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/dbVotaLucas?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=LucasBarbosa
+spring.datasource.password=Bateramusic$70
 
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
-
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+spring.jpa.show-sql=true
+server.port=8080
