--- a/Banco-de-Dados-e-Persistencia/api-endereco/src/main/resources/application.properties
+++ b/Banco-de-Dados-e-Persistencia/api-endereco/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/dbEndereco?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
-spring.datasource.username=LucasBarbosa
-spring.datasource.password=Bateramusic$70
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
