--- a/Banco-de-Dados-e-Persistencia/votalucas-api/src/main/resources/application.properties
+++ b/Banco-de-Dados-e-Persistencia/votalucas-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/dbVotaLucas?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=LucasBarbosa
+spring.datasource.password=Bateramusic$70
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
