--- a/Banco-de-Dados-e-Persistencia/votalucas/src/main/resources/application.properties
+++ b/Banco-de-Dados-e-Persistencia/votalucas/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost/dbVotaLucas?createDatabaseIfNotExis
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto=update
+
 server.port=8081
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
