--- a/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
+++ b/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:./data/bookstock
     username: sa
-    password: password
+    password:
     
   h2:
     console:
