Inicio do processo de criação do sistema de login

--- a/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
+++ b/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:./data/bookstock
+    url: jdbc:h2:file:./data/pedido-app
     username: sa
     password:
     
