--- a/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
+++ b/Tecnologia-Java-e-Orientacao-a-Objetos/pedidos-app-java-web/src/main/resources/application.yml
@@ -24,6 +24,6 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     open-in-view: true
     show-sql: true
